MFLT-5099 Improve OTA-related documentation across all docs (#149)
* Add new OTA-related terms to terminology and update existing

* Fix styling for auth token callout

* Update CLI docs with latest --help and update auth requirements table

* Update "terminology overview" section in all release guides

* Remove redundant identifying software/binaries sections on OTA guides

* Run prettier

* Restore accidentally-removed section on MCU guide

* Realign platform-specific OTA titles

* Link to SV/HV and terminology docs from platform OTA guide

* Update the Software Versions & Hardware Versions doc with OTA info

* Fix delta releases link

* More consistently use "activate Release" instead of "deploy Release"

* Review changes

--- a/docs/android/android-ota-update-client.mdx
+++ b/docs/android/android-ota-update-client.mdx
@@ -16,11 +16,11 @@ the OTA update process. This supports:
   Memfault dashboard.
 - Downloading updates (and resuming interrupted downloads).
 - UI notifications of available updates, and download progress.
+- Incremental updates, referred to as
+  [Delta Releases](/docs/platform/ota/#delta-releases) in Memfault lingo.
 
 In future updates, additional features will be supported:
 
-- Incremental updates (once supported by Memfault servers - no client updates
-  will be required).
 - Further remote configuration of update behavior (e.g. headless update
   behavior, force-update policy).
 
@@ -95,8 +95,8 @@ export TARGET_USES_MFLT_OTA=1
 ```
 
 After building and installing the system image, the Memfault OTA app will be
-active. A release can now be
-[deployed to the cohort](android-releases-integration-guide#deploy-release)
+active. A Release can now be
+[activated in the Cohort](android-releases-integration-guide#activate-the-release)
 containing this device.
 
 ## Customizing the OTA Update Client
