--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -11,14 +11,13 @@ sidebar_label: Memfault Terminology
 | Build ID                                         | A unique identifier for a given Artifact                                                                                                                                                                                                                                                                                                                                                                                               |
 | Cohort                                           | Grouping of devices. Typical cohorts are "alpha", "beta", and "prod", but these can be any grouping, such as a deployment facility.                                                                                                                                                                                                                                                                                                    |
 | Coredump                                         | A capture of the entire memory space of a Device which will generate a Trace in Memfault                                                                                                                                                                                                                                                                                                                                               |
-| Deployment                                       | When a Release is pushed to a particular Cohort. This means that any Device in the given Cohort will be able to query and update to this Release                                                                                                                                                                                                                                                                                       |
 | Device                                           | An edge device that communicates with Memfault. It can report Events, be updated with new software, grouped into Cohorts, etc.                                                                                                                                                                                                                                                                                                         |
-| Device Attribute                                 | The latest value reported for a device for a custom metric (e.g. `battery_level`).                                                                                                                                                                                                                                                                                                                                                     |
-| Device Serial                                    | The Unique Identifier of a Device                                                                                                                                                                                                                                                                                                                                                                                                      |
-| Device Set                                       | A collection of Devices defined by a search query.                                                                                                                                                                                                                                                                                                                                                                                     |
 | Device - Active <a name="device-active"></a>     | A device that has reported diagnostics data in the last week.                                                                                                                                                                                                                                                                                                                                                                          |
 | Device - Inactive <a name="device-inactive"></a> | A device that has previously reported diagnostics data, but not in the last week.                                                                                                                                                                                                                                                                                                                                                      |
 | Device - Pending <a name="device-pending"></a>   | A device that has been created but diagnostics data has not yet been received. This can happen when devices have been created via API or CSV upload, or when devices check for OTA updates but are not uploading diagnostics data.                                                                                                                                                                                                     |
+| Device Attribute                                 | The latest value reported for a device for a custom metric (e.g. `battery_level`).                                                                                                                                                                                                                                                                                                                                                     |
+| Device Serial                                    | The Unique Identifier of a Device                                                                                                                                                                                                                                                                                                                                                                                                      |
+| Device Set                                       | A collection of Devices defined by a search query.                                                                                                                                                                                                                                                                                                                                                                                     |
 | Event                                            | A small payload of information sent from a Device. There are many types of Events, such as Heartbeat Events, Events, Device install Events, etc.                                                                                                                                                                                                                                                                                       |
 | Event - Device Install                           | Events that are generated during a firmware update procedure tracking progress                                                                                                                                                                                                                                                                                                                                                         |
 | Event - Heartbeat                                | Hourly Events that contain vital information about the health of a Device. Most of the data here is user defined and customizable.                                                                                                                                                                                                                                                                                                     |
@@ -35,11 +34,14 @@ sidebar_label: Memfault Terminology
 | Project                                          | A logical warehouse of all the Memfault data related to a particular class of device. Contains Releases, Cohorts, Issues, etc.                                                                                                                                                                                                                                                                                                         |
 | Project Key                                      | The key that is included in the Header of the HTTP request when sending (or retrieving) data from Memfault servers. This is only allowed/required on certain endpoints. It does not grant access to all API endpoints. For general Auth, refer to the Auth section of the Memfault API Documentation                                                                                                                                   |
 | Release                                          | A logical grouping of Artifacts that are usually built from the same revision.                                                                                                                                                                                                                                                                                                                                                         |
+| Release - Full Release                           | A Release that can update device firmware to a specific version, from any older version (`[*->2.0]`)                                                                                                                                                                                                                                                                                                                                   |
+| Release - Delta Release                          | A Release that can update device firmware to a specific version, but only from another specific version (`[1.0->2.0]`)                                                                                                                                                                                                                                                                                                                 |
+| Release Activation                               | When a Release is activated in a particular Cohort. This means that any Device in the given Cohort will be able to query and download this Release                                                                                                                                                                                                                                                                                     |
+| Release Activation - Normal                      | Make a Release available to all Devices in the Cohort immediately                                                                                                                                                                                                                                                                                                                                                                      |
+| Release Activation - Staged Rollout              | Make a Release available to Devices in the Cohort incrementally                                                                                                                                                                                                                                                                                                                                                                        |
 | Revision                                         | The VCS version that is associated with the Release. If using Git, this would be the SHA-1 of the commit.                                                                                                                                                                                                                                                                                                                              |
-| Rollout - Normal                                 | Make a Release available to all Devices in the Cohort immediately                                                                                                                                                                                                                                                                                                                                                                      |
-| Rollout - Staged Release                         | Make a Release available to Devices in the Cohort incrementally                                                                                                                                                                                                                                                                                                                                                                        |
 | Signature                                        | A unique identifier generated for each Trace and used for grouping into Issues                                                                                                                                                                                                                                                                                                                                                         |
 | Software Type                                    | A Software Type is a specific software package that runs on a Device in a multi-component architecture. Example: If a toaster has two MCU's, one which is the main system MCU and the other handles Wi-Fi connections, then there would be two Software Types, one likely called main-fw and the other called wifi-fw. A Software Type has many Software Versions as updates are pushed to the Device.                                 |
+| Software Version                                 | A Software Version is a single release for a particular Software Type. A single Software Version is associated with one Symbol Software Artifact.                                                                                                                                                                                                                                                                                      |
 | Symbols                                          | The .elf file that is used by Memfault to symbolicate any crash data.                                                                                                                                                                                                                                                                                                                                                                  |
 | Trace                                            | A crash or snapshot of the device at a particular moment in time, which can later be converted to a backtrace by Memfault. A Trace can be one of three types: - Trace Event - captures only the program counter (instruction pointer) and the link register (return address) if available - Stack Trace - captures the memory regions of the stack - Coredump Trace - captures most, if not all, relevant memory regions of the system |
-| Software Version                                 | A Software Version is a single release for a particular Software Type. A single Software Version is associated with one Symbol Software Artifact.                                                                                                                                                                                                                                                                                      |
