--- a/src/pages/_partials/_auth-token-required-callout.mdx
+++ b/src/pages/_partials/_auth-token-required-callout.mdx
@@ -1,3 +1,7 @@
-:::note This operation requires an
+:::note
+
+This operation requires an
 [Organization Auth Token](/docs/ci/authentication#organization-auth-token) or
-[User API Key](/docs/ci/authentication#user-api-key). :::
+[User API Key](/docs/ci/authentication#user-api-key).
+
+:::
