--- a/docs/linux/linux-releases-guide.mdx
+++ b/docs/linux/linux-releases-guide.mdx
@@ -1,7 +1,7 @@
 ---
 id: linux-releases-integration-guide
 title: Embedded Linux OTA Integration Guide
-sidebar_label: OTA / Release Management
+sidebar_label: OTA Management
 ---
 
 import LinuxOtaOptionsTabs, {
@@ -15,75 +15,29 @@ with Memfault!
 
 ## Terminology Overview
 
-Before we get started, let's quickly recap some of the terminology used
-throughout the Memfault documentation and how it relates to release management.
-
-At the top level all data in the Memfault UI is encapsulated by the
-"Organization" and "Project" where:
-
-- `Organization` - Entity which contains one or more projects and users.
-  Generally one organization per company.
-- `Project` - A logical warehouse of all the Memfault data related to a
-  particular set of devices. Typically there will we one project per discrete
-  product line. For example, if your company produces a smart light as well as a
-  smart car, these lines would usually be tracked in separate projects. You
-  could also create a "dev" project for one-off testing and prototyping.
-
-### Project Level Filtering
-
-Within a "Project", data can be filtered on three dimensions:
-
-- `Device` - An edge device that communicates with the Memfault cloud. You can
-  look at data collected at the device level to identify the _exact_ issues
-  impacting that unit.
-- `Cohort` - A grouping of devices. You will be able to filter data and deploy
-  releases by this granularity. For example, you could use a cohort to represent
-  devices used for different release stages ("alpha", "beta", "prod") or to
-  identify devices by location ("office", "site A", "site B") or a combination
-  of both ("Site A Alpha", "Site A Beta", etc). A device is always assigned to
-  exactly one "Cohort" at any given time but can freely be moved to another at
-  any time.
-- `Fleet` - All devices within a Project
+Please refer to [Over-the-Air Updates(OTA)](/docs/platform/ota) for an
+introduction to Memfault's OTA concepts and terminology. The paragraphs below
+discuss the platform-specific aspects for Embedded Linux.
 
 ### Identifying a Device
 
-For a "Device" in a project, several pieces of identifying information are
+For a device in a Project, several pieces of identifying information are
 tracked.
 
-- `Device Serial` / `device_serial` - A unique identifier of a device. For
-  example, this may be a serial number written into the EEPROM of your product
-  in the factory or a chip identifier present in the silicon of the main MCU on
-  your platform. This identifier _must_ be unique for every device in the same
-  Project.
-- `Hardware Version` / `hardware_version` - For a given device, the revision of
-  hardware present. For example, this can be used to represent the different
-  stages of [manufacturing builds](https://mflt.io/hardware-engineer-speak)
-  (`evt`, `dvt`, `pvt`, ...).
+- Device ID/Device Serial: a unique identifier of a device. For example, this
+  may be a serial number written into the EEPROM of your product in the factory
+  or a chip identifier present in the silicon of the main MCU on your platform.
+  This identifier _must_ be unique for every device in the same Project.
+- Hardware Version: for a given device, the revision of hardware present. For
+  example, this can be used to represent the different stages of
+  [manufacturing builds](https://mflt.io/hardware-engineer-speak) (`evt`, `dvt`,
+  `pvt`, ...).
 
-_Note: For any given device, neither of these pieces of information should ever
-change._
+:::note
 
-### Identifying Software
+For any given device, neither of these pieces of information should ever change.
 
-- `Software Type` / `software_type` - A shorthand name representing a software
-  package running on your device.
-- `Software Version` / `software_version` - Each build of a "software_type" is
-  uniquely identified by its "software_version".
-
-For more information, see our
-[Software Version](platform/software-version-hardware-version.mdx)
-documentation.
-
-### Identifying Firmware Binaries
-
-- `OTA Payload` - This is the file that you deliver to your device when
-  performing an over-the-air update.
-- `Release` - For each "Release" a unique "OTA Payload" can be deployed per
-  "hardware_version". A set of "hardware_version" / "OTA Payload" pairs makes up
-  a "Release".
-- `Deployment` - The act of publishing a "Release" to a "Cohort" generates a
-  "Deployment". Once deployed, any device in the given "Cohort" will be able to
-  query and update to this Release.
+:::
 
 ## Getting Started
 
@@ -206,9 +160,9 @@ INFO: You can view in the UI here:
 
 :::
 
-### Deploy Release
+### Activate the Release
 
-Now let's deploy the release to the `default` cohort.
+Now let's activate the Release in the `default` Cohort.
 
 :::note
 
@@ -218,14 +172,15 @@ specific cohort check out our [api-docs](https://api-docs.memfault.com/).
 
 :::
 
-In the UI navigate to "Fleet" -> "Cohorts". Click on the picker under next to
-the `default` cohort under "Target Release", select the Release to deploy and
-you will be prompted with options that can be performed for the release.
+In the application, navigate to **Fleet** -> **Cohorts**. Click on the picker
+under next to the `default` cohort under "Target Release", select the Release to
+activate and you will be prompted with options that can be performed for the
+Release.
 
 ### Query for OTA Payload
 
 Now that we have a release uploaded and published let's walk through the steps
-to download the release on a device!
+to download the Release on a device!
 
 <LinuxOtaOptionsTabs>
   <TabItem value="swupdate">
