--- a/docs/mcu/releases-guide.mdx
+++ b/docs/mcu/releases-guide.mdx
@@ -1,7 +1,7 @@
 ---
 id: releases-integration-guide
-title: Releases Integration Guide
-sidebar_label: Release Management
+title: MCU OTA Integration Guide
+sidebar_label: OTA Management
 ---
 
 This tutorial covers how to manage your firmware over-the-air update flow with
@@ -9,90 +9,29 @@ Memfault!
 
 ## Terminology Overview
 
-Before we get started, let's quickly recap some of the terminology used
-throughout the Memfault documentation and how it relates to release management.
-
-At the top level all data in the Memfault UI is encapsulated by the
-"Organization" and "Project" where:
-
-- `Organization` - Entity which contains one or more projects and users.
-  Generally one organization per company.
-- `Project` - A logical warehouse of all the Memfault data related to a
-  particular set of devices. Typically there will we one project per discrete
-  product line. For example, if your company produces a smart light as well as a
-  smart car, these lines would usually be tracked in separate projects. You
-  could also create a "dev" project for one-off testing and prototyping.
-
-### Project Level Filtering
-
-Within a "Project", data can be filtered on three dimensions:
-
-- `Device` - An edge device that communicates with the Memfault cloud. You can
-  look at data collected at the device level to identify the _exact_ issues
-  impacting that unit.
-- `Cohort` - A grouping of devices. You will be able to filter data and deploy
-  releases by this granularity. For example, you could use a cohort to represent
-  devices used for different release stages ("alpha", "beta", "prod") or to
-  identify devices by location ("office", "site A", "site B") or a combination
-  of both ("Site A Alpha", "Site A Beta", etc). A device is always assigned to
-  exactly one "Cohort" at any given time but can freely be moved to another at
-  any time.
-- `Fleet` - All devices within a Project
+Please refer to [Over-the-Air Updates(OTA)](/docs/platform/ota) for an
+introduction to Memfault's OTA concepts and terminology. The paragraphs below
+discuss the platform-specific aspects for MCU Projects.
 
 ### Identifying a Device
 
-For a "Device" in a project, several pieces of identifying information are
+For a device in a Project, several pieces of identifying information are
 tracked.
 
-- `Device Serial` / `device_serial` - A unique identifier of a device. For
-  example, this may be a serial number written into the EEPROM of your product
-  in the factory or a chip identifier present in the silicon of the main MCU on
-  your platform. This identifier _must_ be unique for every device in the same
-  Project.
-- `Hardware Version` / `hardware_version` - For a given device, the revision of
-  hardware present. For example, this can be used to represent the different
-  stages of [manufacturing builds](https://mflt.io/hardware-engineer-speak)
-  (`evt`, `dvt`, `pvt`, ...).
+- Device Serial: a unique identifier of a device. For example, this may be a
+  serial number written into the EEPROM of your product in the factory or a chip
+  identifier present in the silicon of the main MCU on your platform. This
+  identifier _must_ be unique for every device in the same Project.
+- Hardware Version: for a given device, the revision of hardware present. For
+  example, this can be used to represent the different stages of
+  [manufacturing builds](https://mflt.io/hardware-engineer-speak) (`evt`, `dvt`,
+  `pvt`, ...).
 
-_Note: For any given device, neither of these pieces of information should ever
-change._
+:::note
 
-### Identifying Software
+For any given device, neither of these pieces of information should ever change.
 
-- `Symbol File` - This is the ELF file output by an invocation of your
-  toolchain's linker. It will typically have one of the following file
-  extensions: `.elf`, `.out`, or `.axf`.
-- `Software Type` / `software_type` - A shorthand name representing a software
-  package running on your device. There is one matching "software_type" for
-  every unique "Symbol File" generated as part of your build process. For
-  example, `wifi-fw` and `main-fw`). Note for situations where a different
-  symbol file is produced per "hardware_version", you will need to name the
-  "software_types" differently. For example, if a new sensor was added between
-  `evt` and `dvt` and now the `main-fw` between the two differ, "software_type"s
-  like `main-fw-evt` & `main-fw-dvt` could be used.
-- `Software Version` / `software_version` - Each build of a "software_type" is
-  expected to be uniquely identified by its "software_version" (i.e "1.0.0").
-  Together the "software_type" and "software_version" uniquely identify a
-  "Symbol File".
-- `Build Id` - An automatically generated identifier that is based on the
-  contents of the ELF file. See
-  [this section for more information](/docs/mcu/symbol-file-build-ids).
-
-### Identifying OTA Payload Binaries
-
-- `OTA Payload` - This is the binary that you deliver to your device when
-  performing an over-the-air update. Unlike a "Symbol File", the binary may
-  contain code or assets for multiple "Software Types". For example if you have
-  an MCU for Wifi (`wifi-fw`) and another MCU for general orchestration
-  (`main-fw`), the "OTA Payload" could include updates for both bundled
-  together. In this situation your firmware would then un-package the "OTA
-  Payload" and perform the update for both MCUs.
-- `Release` - For each "Release" a unique "OTA Payload" can be deployed per
-  "hardware_version". A set of "hardware_version" / "OTA Payload" pairs makes up
-  a "Release".
-- `Deployment` - The act of publishing a "Release" to a "Cohort" generates a
-  "Deployment". Once deployed, any device in the given "Cohort" will be able to
-  query and update to this Release.
+:::
 
 ## Getting Started
 
