--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -164,7 +164,7 @@ details** view.
 
 Along with the query to the Latest Release endpoint, a device sends:
 
-- the Device ID (device serial) to determine its Cohort,
+- the Device ID (often the device serial number) to determine its Cohort,
 - the [Software Type][terminology] to determine the set of Releases against
   which to apply these rules,
 - its current [Software Version][terminology],
