--- a/docs/platform/software-version-hardware-version.mdx
+++ b/docs/platform/software-version-hardware-version.mdx
@@ -72,9 +72,10 @@ to:
 
 ### Version Schemes
 
-If you're interested in learning how Memfault decides which OTA Release to
-deliver to a specific device, refer to the
-[Updating Behavior section on our platform-agnostic OTA documentation page](/docs/platform/ota#updating-behavior).
+Comparison between versions is a fundamental input to Memfault's OTA system.
+Consult the section
+[Updating Behavior on our OTA documentation](/docs/platform/ota#updating-behavior)
+to see how the rules below are applied to OTA.
 
 #### Ordering
 
