Fix broken links on Pinnacle 100 guide (#159)

--- a/docs/mcu/pinnacle-100-guide.mdx
+++ b/docs/mcu/pinnacle-100-guide.mdx
@@ -18,9 +18,9 @@ any project using
 
 The Pinnacle-100-Firmware has built-in support for the Memfault Firmware SDK.
 Laird Connectivity has released some
-[excellent documentation](https://github.com/LairdCP/Pinnacle-100-Firmware/blob/main/docs/memfault.md)
+[excellent documentation](https://lairdcp.github.io/guides/ble-gateway-firmware/1.0/docs/memfault.html)
 on how to integrate Memfault and the
-[AWS Out-of-Box demo](https://github.com/LairdCP/Pinnacle-100-Firmware/blob/main/docs/readme_ltem_aws.md)
+[AWS Out-of-Box demo](https://lairdcp.github.io/guides/ble-gateway-firmware/1.0/docs/readme_aws.html)
 includes a full Memfault integration that can be tried out. We recommend
 following both this documentation page as well as Laird's.
 
